[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200
per-file-ignores=
    tributary/lazy/__init__.py:F401, F403
    tributary/lazy/base.py:F401
    tributary/lazy/calculations/__init__.py:F401, F403
    tributary/streaming/__init__.py:F401, F403
    tributary/streaming/calculations/__init__.py:F401, F403
    tributary/streaming/control/__init__.py:F401
    tributary/streaming/input/__init__.py:F401, F403
    tributary/streaming/output/__init__.py:F401
